--- a/estilos/style.css
+++ b/estilos/style.css
@@ -53,3 +53,14 @@ section#login > div#formulario {
     display: block;
     padding: 10px;
 }
+
+div#formulario > h1 {
+    text-align: center;
+    padding: 10px;
+    font-size: 2em;
+}
+
+div#formulario > p{
+    padding: 10px;
+    text-align: justify;
+}
