--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,7 +34,7 @@ section#login{
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.336);
 
@@ -63,4 +63,40 @@ div#formulario > h1 {
 div#formulario > p{
     padding: 10px;
     text-align: justify;
+}
+
+p.campo {
+    background-color: rgba(89, 129, 14, 0.541);
+    display: block;
+    height: 40px;
+    margin: 5px 0px;
+    border-radius: 5px;
+}
+
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    margin-top: 5px;
+    background-color: #964728;
+    color: whitesmoke;
+    border-radius: 5px;
+    border: none;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 7px;
+    margin-top: 5px;
+    background-color: #bb5831;
+    color: whitesmoke;
+    border: 1px solid #a84f2c;
+    border-radius: 5px;
+    text-decoration: none;
 }
