--- a/estilos/style.css
+++ b/estilos/style.css
@@ -73,6 +73,26 @@ p.campo {
     border-radius: 5px;
 }
 
+p.campo span {
+    color: white;
+    background: black;
+    font-size: 2em;
+    padding: 5px;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px 0px 0px 5px;
+}
+
+p.campo input{
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 38px;
+    transform: translateY(-12px);
+    border: 0px;
+    border-radius: 5px;
+    padding: 4px;
+}
+
 
 form > input[type=submit] {
     display: block;
@@ -94,9 +114,13 @@ form > a.botao {
     height: 40px;
     padding-top: 7px;
     margin-top: 5px;
-    background-color: #bb5831;
-    color: whitesmoke;
+    color: black;
     border: 1px solid #a84f2c;
     border-radius: 5px;
     text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: #bb5831;
+    color: whitesmoke;
 }
